--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,12 @@
           <ul class="gallery-list list">
             <li class="item">
               <a href="" class="link">
-                <img src="./images/gallery-1.jpg" class="image" alt="Gallery 1"  />
+                <div class="item-thumb">
+                  <img src="./images/gallery-1.jpg" class="image" alt="Gallery 1" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="item-text">
                   <h2 class="title">Banking App Interface Concept</h2>
                   <p class="description">App</p>
@@ -57,7 +62,12 @@
             </li>
             <li class="item">
               <a href="" class="link">
-                <img src="./images/gallery-2.jpg" class="image" alt="Gallery 2" width="360" height="300" />
+                <div class="item-thumb">
+                  <img src="./images/gallery-2.jpg" class="image" alt="Gallery 2" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="item-text">
                   <h2 class="title">Cashless Payment</h2>
                   <p class="description">Marketing</p>
@@ -66,7 +76,12 @@
             </li>
             <li class="item">
               <a href="" class="link">
-                <img src="./images/gallery-3.jpg" class="image" alt="Gallery 3" width="360" height="300" />
+                <div class="item-thumb">
+                  <img src="./images/gallery-3.jpg" class="image" alt="Gallery 3" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="item-text">
                   <h2 class="title">Meditaion App</h2>
                   <p class="description">App</p>
@@ -75,7 +90,12 @@
             </li>
             <li class="item">
               <a href="" class="link">
-                <img src="./images/gallery-4.jpg" class="image" alt="Gallery 4" width="360" height="300" />
+                <div class="item-thumb">
+                  <img src="./images/gallery-4.jpg" class="image" alt="Gallery 4" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="item-text">
                   <h2 class="title">Taxi Service</h2>
                   <p class="description">Marketing</p>
@@ -84,7 +104,12 @@
             </li>
             <li class="item">
               <a href="" class="link">
-                <img src="./images/gallery-5.jpg" class="image" alt="Gallery 5" width="360" height="300" />
+                <div class="item-thumb">
+                  <img src="./images/gallery-5.jpg" class="image" alt="Gallery 5" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="item-text">
                   <h2 class="title">Screen Illustrations</h2>
                   <p class="description">Design</p>
@@ -93,7 +118,12 @@
             </li>
             <li class="item">
               <a href="" class="link">
-                <img src="./images/gallery-6.jpg" class="image" alt="Gallery 6" width="360" height="300" />
+                <div class="item-thumb">
+                  <img src="./images/gallery-6.jpg" class="image" alt="Gallery 6" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="item-text">
                   <h2 class="title">Online Courses</h2>
                   <p class="description">Marketing</p>
@@ -102,7 +132,12 @@
             </li>
             <li class="item">
               <a href="" class="link">
-                <img src="./images/gallery-7.jpg" class="image" alt="Gallery 7" width="360" height="300" />
+                <div class="item-thumb">
+                  <img src="./images/gallery-7.jpg" class="image" alt="Gallery 7" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="item-text">
                   <h2 class="title">Instagram Stories Concept</h2>
                   <p class="description">Design</p>
@@ -111,7 +146,12 @@
             </li>
             <li class="item">
               <a href="" class="link">
-                <img src="./images/gallery-8.jpg" class="image" alt="Gallery 8" width="360" height="300" />
+                <div class="item-thumb">
+                  <img src="./images/gallery-8.jpg" class="image" alt="Gallery 8" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="item-text">
                   <h2 class="title">Organic Food</h2>
                   <p class="description">Web Site</p>
@@ -120,7 +160,12 @@
             </li>
             <li class="item">
               <a href="" class="link">
-                <img src="./images/gallery-9.jpg" class="image" alt="Gallery 9" width="360" height="300" />
+                <div class="item-thumb">
+                  <img src="./images/gallery-9.jpg" class="image" alt="Gallery 9" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="item-text">
                   <h2 class="title">Fresh Coffee</h2>
                   <p class="description">Web Site</p>
